# commodity_futures_settlement_price_analysis

./: .env.example  .gitignore  README.md  config.py  conftest.py  pyproject.toml  requirements.txt
dashboard/: app.py
data/sample/: henry_hub_settlements.csv  wti_settlements.csv
scripts/: build_sample_data.py  run_pipeline.py
src/: anomalies.py  data_loader.py  eia_client.py  simulate.py  term_structure.py
tests/: test_anomalies.py  test_term_structure.py
