[project]
name = "commodity-futures-settlement-price-analysis"
version = "0.1.0"
description = "Anomaly detection and term-structure analysis on WTI crude and Henry Hub natural-gas futures settlements (EIA Open Data), with a Streamlit + Plotly dashboard."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tejas Pandya", email = "tbp8777@nyu.edu" }]
license = { text = "MIT" }
keywords = ["commodities", "futures", "term-structure", "anomaly-detection", "energy", "eia"]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "requests>=2.28",      # EIA Open Data API client
    "plotly>=5.18",        # dashboard charts
    "streamlit>=1.40",     # dashboard app
    "python-dotenv>=1.0",  # load EIA_API_KEY from .env
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
]

[tool.uv]
# Flat src/ + scripts/ app, not an installable library — uv just manages the env.
package = false

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
